--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "semantic-release": "semantic-release"
   },
   "keywords": [],
-  "author": ""
+  "author": "",
+  "dependencies": {
+    "semantic-release": "^24.2.3"
+  }
 }
