--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
     # 수동 실행을 위한 설정 유지
 
 permissions:
-  contents: read # for checkout
+  contents: write  # 버전 태그를 push하기 위해 필요
 
 jobs:
   release:
